@@ -738,7 +738,7 @@ void HTMLTreeBuilder::processStartTagForInBody(AtomicHTMLToken& token)
         // This is the SVG foreign content branch point.
         notImplemented();
     }
-    if (token.name() == captionTag || token.name() == colTag || token.name() == colgroupTag || token.name() == frameTag || token.name() == headTag || token.name() == tbodyTag || token.name() == tdTag || token.name() == tfootTag || token.name() == thTag || token.name() == theadTag || token.name() == trTag) {
+    if (token.name() == captionTag || token.name() == colTag || token.name() == colgroupTag || token.name() == frameTag || token.name() == headTag || isTableBodyContextTag(token.name()) || token.name() == tdTag || token.name() == thTag || token.name() == trTag) {
         parseError(token);
         return;
     }
@@ -908,7 +908,7 @@ void HTMLTreeBuilder::processStartTag(AtomicHTMLToken& token)
         break;
     case InCaptionMode:
         ASSERT(insertionMode() == InCaptionMode);
-        if (token.name() == captionTag || token.name() == colTag || token.name() == colgroupTag || token.name() == tbodyTag || token.name() == tdTag || token.name() == tfootTag || token.name() == thTag || token.name() == theadTag || token.name() == trTag) {
+        if (token.name() == captionTag || token.name() == colTag || token.name() == colgroupTag || isTableBodyContextTag(token.name()) || token.name() == tdTag || token.name() == thTag || token.name() == trTag) {
             parseError(token);
             if (!processCaptionEndTagForInCaption()) {
                 ASSERT(m_isParsingFragment);
@@ -958,7 +958,7 @@ void HTMLTreeBuilder::processStartTag(AtomicHTMLToken& token)
                 return;
             }
             m_openElements.popUntilTableBodyScopeMarker();
-            ASSERT(currentElement()->tagQName() == tbodyTag || currentElement()->tagQName() == tfootTag || currentElement()->tagQName() == theadTag);
+            ASSERT(isTableBodyContextTag(currentElement()->localName()));
             processFakeEndTag(currentElement()->tagQName());
             processStartTag(token);
             return;
@@ -1060,7 +1060,7 @@ void HTMLTreeBuilder::processStartTag(AtomicHTMLToken& token)
         break;
     case InSelectInTableMode:
         ASSERT(insertionMode() == InSelectInTableMode);
-        if (token.name() == captionTag || token.name() == tableTag || token.name() == tbodyTag || token.name() == tfootTag || token.name() == theadTag || token.name() == trTag || token.name() == tdTag || token.name() == thTag) {
+        if (token.name() == captionTag || token.name() == tableTag || isTableBodyContextTag(token.name()) || token.name() == trTag || token.name() == tdTag || token.name() == thTag) {
             parseError(token);
             AtomicHTMLToken endSelect(HTMLToken::EndTag, selectTag.localName());
             processEndTag(endSelect);
@@ -1552,7 +1552,7 @@ void HTMLTreeBuilder::processEndTagForInTable(AtomicHTMLToken& token)
         resetInsertionModeAppropriately();
         return;
     }
-    if (token.name() == bodyTag || token.name() == captionTag || token.name() == colTag || token.name() == colgroupTag || token.name() == htmlTag || token.name() == tbodyTag || token.name() == tdTag || token.name() == tfootTag || token.name() == thTag || token.name() == theadTag || token.name() == trTag) {
+    if (token.name() == bodyTag || token.name() == captionTag || token.name() == colTag || token.name() == colgroupTag || token.name() == htmlTag || isTableBodyContextTag(token.name()) || token.name() == tdTag || token.name() == thTag || token.name() == trTag) {
         parseError(token);
         return;
     }
@@ -1628,7 +1628,7 @@ void HTMLTreeBuilder::processEndTag(AtomicHTMLToken& token)
             processEndTag(token);
             return;
         }
-        if (token.name() == bodyTag || token.name() == colTag || token.name() == colgroupTag || token.name() == htmlTag || token.name() == tbodyTag || token.name() == tdTag || token.name() == tfootTag || token.name() == thTag || token.name() == theadTag || token.name() == trTag) {
+        if (token.name() == bodyTag || token.name() == colTag || token.name() == colgroupTag || token.name() == htmlTag || isTableBodyContextTag(token.name()) || token.name() == tdTag || token.name() == thTag || token.name() == trTag) {
             parseError(token);
             return;
         }
@@ -1718,7 +1718,7 @@ void HTMLTreeBuilder::processEndTag(AtomicHTMLToken& token)
         break;
     case InTableBodyMode:
         ASSERT(insertionMode() == InTableBodyMode);
-        if (token.name() == tbodyTag || token.name() == tfootTag || token.name() == theadTag) {
+        if (isTableBodyContextTag(token.name())) {
             if (!m_openElements.inTableScope(token.name())) {
                 parseError(token);
                 return;
@@ -1736,7 +1736,7 @@ void HTMLTreeBuilder::processEndTag(AtomicHTMLToken& token)
                 return;
             }
             m_openElements.popUntilTableBodyScopeMarker();
-            ASSERT(currentElement()->tagQName() == tbodyTag || currentElement()->tagQName() == tfootTag || currentElement()->tagQName() == theadTag);
+            ASSERT(isTableBodyContextTag(currentElement()->localName()));
             processFakeEndTag(currentElement()->tagQName());
             processEndTag(token);
             return;
@@ -1819,7 +1819,7 @@ void HTMLTreeBuilder::processEndTag(AtomicHTMLToken& token)
         break;
     case InSelectInTableMode:
         ASSERT(insertionMode() == InSelectInTableMode);
-        if (token.name() == captionTag || token.name() == tableTag || token.name() == tbodyTag || token.name() == tfootTag || token.name() == theadTag || token.name() == trTag || token.name() == tdTag || token.name() == thTag) {
+        if (token.name() == captionTag || token.name() == tableTag || isTableBodyContextTag(token.name()) || token.name() == trTag || token.name() == tdTag || token.name() == thTag) {
             parseError(token);
             if (m_openElements.inTableScope(token.name())) {
                 AtomicHTMLToken endSelect(HTMLToken::EndTag, selectTag.localName());
